--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: green;
+  background-color: grey;
 }
 
 .navbar p {
@@ -7,13 +7,14 @@ body {
 }
 
 .navbar {
-  background-color: yellow;
+  background-color: #FFB4B0;
   margin: 20px;
 }
 
 .artistSelect {
-  background-color: orange;
+  background-color: #4DD7FA;
   float: left;
+  margin-right: 20px;
 }
 
 .artistSelect select {
@@ -23,23 +24,54 @@ body {
 
 
 .artist {
-  width: 500px;
+  /* width: 500px; */
   margin: 20px;
 }
 
+/*
 .radioButtonAlign input {
-  width: 70%;
+
+  display: inline-block;
+  float: left;
+}
+*/
+
+.radioButtonColumnOne {
+    height: 100%;
+    width: 50%;
+    float: left;
+    margin-left: -2px
 }
 
+.radioButtonColumnTwo {
+    height: 100%;
+    width: 50%;
+    float: left;
+    /* margin-right: -2px */
+}
+
+
+
+.radioButtonColumnOne label {
+  display: block;
+}
+
+.radioButtonColumnTwo label {
+  display: block;
+}
+
+
 .song {
-  background-color:pink;
+  background-color: #FEFAC0;
   min-width: 350px;
   margin: 0 20px; 
   float: center;
 }
 
+
+
 .song h3 {
-  color: white;
+  color: #785616;
 }
 
 .song p {
@@ -47,7 +79,7 @@ body {
 }
 
 fieldset {
-  border-width: 12px;
+  border-width: 4px;
   /* border-style: double; */
-  border-color: red;
+  border-color: white;
 }
