--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,22 @@ body {
   margin: 20px 0;
 }
 
+#addArtist {
+  margin: 20px;
+  background-color: chartreuse;
+}
+
+.addArtist {
+  background-color: #green;
+  display: inline-block;
+  /*margin-left: 20px;*/
+  /*float: left;*/
+  /*margin: auto;*/
+}
+
+.visibility {
+  display: none;
+}
 
 .artist {
   /* width: 500px; */
